# job-vacancy-explorer

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run.py  vacancies.db
.github/: dependabot.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: ba93497f0d70_create_vacancies_table.py  e5c1a4e7b8d9_add_full_text_search.py
app/: __init__.py  routes.py
app/static/css/: style.css
app/templates/: analytics.html  base.html  index.html  vacancies.html
core/: __init__.py  config.py  database.py  extensions.py  models.py  scheduler.py
parsers/: __init__.py  app.py  base_parser.py  dto.py  hh_parser.py  superjob_parser.py  utils.py  view_vakancies.py
parsers/templates/: vacancies.html
scripts/: migrate_data.py
tests/: conftest.py
tests/app/: test_routes.py
tests/core/: test_database.py  test_scheduler.py
tests/integration/: __init__.py  test_database_connection.py
tests/parsers/: test_dto.py  test_hh_parser.py  test_superjob_parser.py  test_utils.py  test_view_vakancies.py
